--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-
 /* Reset básico */
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box; /* Adicionado para consistência no layout */
 }
 
 /* Estilizando o header */
@@ -16,15 +16,16 @@ header {
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     display: flex;
-    justify-content: space-between; /* Espaça os itens para alinhar o texto e o menu */
+    width: 70%;
+    margin: 0 auto; /* Centraliza o container na página */
+    justify-content: center; /* Alinha logo e menu */
     align-items: center;
-    gap: 20px;
-    margin: 0 0 10px 0;
+    margin-bottom: 10px; /* Ajuste de margem inferior */
+    gap: 20px; /* Espaçamento entre logo e menu */
 }
 
 /* Estilizando o texto <p> dentro do container */
 .container p {
-    margin: 0;
     font-size: 15px;
     color: #333;
     font-weight: 600;
@@ -35,7 +36,6 @@ header {
     text-decoration: none;
     color: #333;
     font-weight: 600;
-    font-family: 'Poppins', sans-serif; /* Fonte moderna */
     transition: color 0.3s, background-color 0.3s;
     padding: 3px 8px;
     border-radius: 15px;
@@ -43,14 +43,13 @@ header {
 
 /* Efeito hover nos links */
 .container a:hover {
-    font-size: 20px;
     background-color: rgba(107, 111, 110, 0.392);
 }
 
 /* Estilizando a linha horizontal no header */
 header hr {
     margin: 10px auto;
-    width: 90%;
+    width: 80%;
     height: 1px;
     background-color: #ff0000;
 }
